# Papi

./: .gitignore  tasks.md  tasks.readme
arm/: 8mmrod1.part  8mmrod2.part  8mmrod2.stl  base.part  base.stl  bottomplate.part  camera.stl  config.json  doubleu_2_visual.stl  doubleu_3_visual.stl  doubleu_4_visual.stl  doubleu_visual.stl  e3.part  e4.part  e4.stl  leg.part  leg.stl  leg_2_visual.stl  leg_3_visual.stl  leg_4_visual.stl  leg_visual.stl  mg995.stl  mount_left.part  mount_left.stl  mountbearing.part  mountbearing.stl  mountplate.part  mountplate.stl  outarm.part  part1.part  part2.part  part3.part  part4.part  part_1.part  part_12.part  part_12.stl  part_2.part  part_2_lf.part  part_2_lf.stl  part_3.part  (+9 more)
gantry/: ArduinoSerial.py  cv2shit.py  main.py  openaishit.py  yoloshit.py
requester/: main.cpp  my_request
ros2_ws/: r6bot.gv  r6bot.urdf
ros2_ws/src/GANTRY_ROBOT_CONTROL_ROS2/robot_description/: CMakeLists.txt
ros2_ws/src/GANTRY_ROBOT_CONTROL_ROS2/robot_moveit_config/: CMakeLists.txt
ros2_ws/src/hath/: CMakeLists.txt  package.xml
ros2_ws/src/hath/config/: hath_controller.yaml
ros2_ws/src/hath/launch/: display.launch.py  gazebo.launch.py
ros2_ws/src/hath/rviz/: urdf_config.rviz
ros2_ws/src/hath/scripts/: example_joint_trajectory_publisher.py
ros2_ws/src/hath/world/: empty.world
ros2_ws/src/kai/: CMakeLists.txt  kai.xml  package.xml
ros2_ws/src/kai/config/: kai_controller.yaml
ros2_ws/src/kai/hardware/: kai_hardware.cpp
ros2_ws/src/kai/hardware/include/kai/: kai_hardware.hpp
ros2_ws/src/kai/launch/: controller2.launch.py  display.launch.py  gazebo.launch.py  robot_controller.launch.py
ros2_ws/src/kai/rviz/: urdf_config.rviz
ros2_ws/src/kai/scripts/: example_joint_trajectory_publisher.py
ros2_ws/src/kai/src/description/: base.part  colour.xacro  config.json  gazebo.xacro  kai_description.urdf  lowerlimb.part  lowerlimb.stl  mg995.part  outarm.part  part_1.part  part_1.stl  part_4.part  part_4.stl  robot.urdf  robot.urdf.xacro  robot_core.xacro  ros_control.xacro  shoulder.part  shoulder.stl  torso_quadruped.part  torso_quadruped.stl  upperlimb.part  upperlimb.stl
ros2_ws/src/kai/src/description/meshes/: base.part  mg995.part
ros2_ws/src/kai_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/kai_moveit/config/: initial_positions.yaml  joint_limits.yaml  kai.ros2_control.xacro  kai.srdf  kai.urdf.xacro  kinematics.yaml  (+2 more)
(+50 files in other folders)
